--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,35 @@
 
 .navbar {
   margin-bottom: 0;
+  background: #333;
+}
+
+.navbar a.navbar-brand:link,
+.navbar a.navbar-brand:visited {
+  color: white;
+  text-align: center;
+}
+
+.navbar a.navbar-brand:hover,
+.navbar a.navbar-brand:active {
+    color: black;
+    text-align: center;
+}
+
+.navbar-default .navbar-nav li a:link,
+.navbar-default .navbar-nav li a:visited {
+  display: inline-flex;
+  align-items: flex-end;
+  align-content: flex-end;
+  color: white;
+}
+
+.navbar-default .navbar-nav li a:hover,
+.navbar-default .navbar-nav li a:active {
+  display: inline-flex;
+  align-items: flex-end;
+  align-content: flex-end;
+  color: blue;
 }
 
 /* CUSTOMIZED CAROUSEL
@@ -10,8 +39,8 @@
 
 /* Carousel base class */
 .carousel {
-  height: 240px;
-  margin-bottom: 30px;
+  height: 200px;
+  margin-bottom: 20px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -20,15 +49,15 @@
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 240px;
-  background-color: #777;
+  height: 200px;
+  background-color: #600;
 }
 .carousel-inner > .item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 240px;
+  height: 200px;
 }
 
 @media (min-width: 768px) {
@@ -37,7 +66,7 @@
   .carousel-caption p {
     margin-bottom: 20px;
     font-size: 21px;
-    line-height: 1.4;
+    line-height: 3;
   }
 
 }
@@ -46,19 +75,20 @@
 -------------------------------------------------- */
 
 .marketing {
-  margin: 60px auto;
+  margin: 10px auto;
 }
 
 .marketing .col-md-4 {
   text-align: center;
   font-size: 16px;
+  padding: 10px;
 }
 
 .marketing .col-md-4 .glyphicon {
   font-size: 60px;
   background-color: #EAEAEA;
   border-radius: 50%;
-  padding: 40px;
+  padding: 10px;
   color: #444;
 }
 
@@ -73,7 +103,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 160px;
+  margin-bottom: 100px;
 }
 
 .footer,
@@ -82,11 +112,10 @@ footer {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 160px;
-  background: #444;
+  height: 50px;
+  background: #413C3C;
   color: white;
   text-shadow: 1px 1px 1px black;
-  padding: 40px 0;
 }
 
 /* RESPONSIVE CSS
